<?xml version="1.0"?>
<package>
  <name>turtlebot_rgbdslam</name>
  <version>0.0.0</version>
  <description>
    Started from ccny rgbd slam
  </description>

  <maintainer email="jihoonl@todo.todo">jihoonl</maintainer>

  <license>LGPL</license>


  <author>CCNY</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>

</package>
